# blinkyeyes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-site.yml  release.yml
auto-build/: WORKER_INSTRUCTIONS.md  decisions.md  plan.md  run.sh
auto-build/completed/: block-0.md  block-1.md  block-10.md  block-2.md  block-3.md  block-4.md  block-5.md  block-6.md  block-7.md  block-8.md  block-9.md
onboarding_auto_build/: WORKER_INSTRUCTIONS.md  decisions.md  plan.md  run.sh
onboarding_auto_build/completed/: block-0.md  block-1.md  block-2.md  block-3.md  block-4.md  block-5.md  block-6.md  block-7.md  block-8.md
saas_ready_auto_build/: WORKER_INSTRUCTIONS.md  decisions.md  plan.md  run.sh
saas_ready_auto_build/completed/: block-0.md  block-1.md  block-2.md  block-3.md  block-4.md  block-5.md  block-6.md  block-7.md  block-8.md
scripts/: release.sh
server/: deploy.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_onboarding.sql
src-tauri/src/: analytics.rs  audio.rs  autostart.rs  commands.rs  db.rs  idle.rs  lib.rs  main.rs  notifications.rs  onboarding.rs  overlay.rs  settings.rs  state.rs  timer.rs  tray.rs
website/: 404.html  index.html  robots.txt  script.js  sitemap.xml
(+23 files in other folders)
